# ecommerce-lambdatest

./: .env_example  .gitignore  README.md  config.py  pyproject.toml  pytest.ini
config/: test_run_config.py
data/: data_setup.py  models.py  product_constants.py  product_strings.py
pages/: application.py  cart_page.py  goods_page.py  item_page.py  login_page.py  main_page.py  registration_page.py
pages/components/: breadcrumb_bar.py
tests/: conftest.py  test_add_to_cart.py  test_edit_cart.py  test_user_account.py
utils/: attach.py  env_path_getter.py  helpers.py  logger.py  price_helpers.py  session.py
